# msi-carcassonne

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile.config  README.md  caffe_makefile.config  compile_commands.json  gameplay.proto  make-plots.r  mcts.csv  net_tic_tac_6_4_2_res_block.prototxt  out.txt  out_eden.txt  protogen.sh  rocm.env  run.sh  solver.prototxt
.cache/clangd/index/: AI.h.BF350F282DFDF612.idx  Board.cpp.3F756F9D8CDC76CF.idx  Board.h.8022D8FE0DC9F1E4.idx  BoardTest.cpp.526ABD997B9AAB8E.idx  BoardView.cpp.A4D5A325DE58D603.idx  BoardView.h.449524542D9C278F.idx  CSVLogger.h.A4481A68A3645B08.idx  CaffeTest.cpp.8770D3E6FE918139.idx  Camera.h.2A1C707519B600D4.idx  Carcassonne.pb.cc.D1E084BD8C3D4A70.idx  Carcassonne.pb.h.226F867FBABEC356.idx  Carcassonne.pb.h.338E84E71E19D890.idx  Concurrency.h.EB797A5A77DD4079.idx  Connection.h.62DC95D726165429.idx  Contact.h.EFA9D45D38F00AB2.idx  Context.cpp.DB4FD1F487672C8F.idx  Context.h.6160DD57D7FFF1F1.idx  Decoder.cpp.912BDA7026A23A48.idx  Decoder.h.4F525CCF47A026A8.idx  DeepRL.cpp.6B437443D84365DC.idx  DeepRL.h.E43FF0206A042C38.idx  DeepRLPlayer.cpp.11C52DA79C11BA75.idx  DeepRLPlayer.h.80BD207E3D17431E.idx  DiffEvol.cpp.80280139539EEB17.idx  DiffEvol.h.2AC06C0B538AAA6D.idx  Direction.h.B48EAE594F513484.idx  Edge.h.808BC2562415BDF4.idx  EvolutionTest.cpp.BE7F3AD7F4750731.idx  FiguresView.cpp.05CFF62DA9D12E0E.idx  FiguresView.h.A3946DD743DDFDBF.idx  Font.cpp.B714C5311FD4514C.idx  Font.h.4DE7F44D51A31A2B.idx  Game.cpp.9D81E0B222594311.idx  Game.h.B6FA2DBF0C6450E7.idx  GameState.cpp.147B32753C36592B.idx  GameState.h.FC6328604B986F5D.idx  GameView.cpp.E558135149682F5A.idx  GameView.h.48241E087C592604.idx  Groups.h.F03738F1267A8841.idx  HeuristicPlayer.cpp.F7D1C0E39025751D.idx  (+84 more)
api/proto/: Carcassonne.proto
csv/: gen_heuristic_params.csv  gen_heuristic_params2.csv  heuristic_params_per_switch.csv  out2.txt
include/Carcassonne/: Board.h  Connection.h  Contact.h  Core.h  Direction.h  Edge.h  Groups.h  IBoard.h  IGame.h  IMove.h  Iterator.h  Move.h  Parameters.h  Player.h  Position.h  ScoreBoard.h  Tiles.h
include/Carcassonne/AI/: AI.h  DeepRL.h  DeepRLPlayer.h  HeuristicPlayer.h  MCTS.h  MCTSPlayer.h  Network.h  Node.h  RandomPlayer.h  Tree.h
include/Carcassonne/Decoder/: Decoder.h  Proto.h
include/Carcassonne/Encoder/: GameState.h  IBoolWriter.h  Proto.h  Rollout.h
include/Carcassonne/Frontend/: BoardView.h  Camera.h  FiguresView.h  GameView.h  Object.h  PlaceFigureView.h  PlaceTileView.h  Resource.h  ScoreBoardView.h  Tile.h
include/Carcassonne/Game/: Board.h  Board_GPU.h  EventManager.h  Game.h  Game_GPU.h  Move.h  Move_GPU.h  Render.h
include/Carcassonne/Game_GPU/: Board.h  Game.h  Move.h
include/Carcassonne/Graphics/: Context.h  Resource.h  SDLContext.h  Surface.h  Texture.h
include/Carcassonne/Input/: Input.h
include/Carcassonne/Proto/: Carcassonne.pb.h
include/Carcassonne/RL/: Concurrency.h  DataCreator.h  GamePool.h  Network.h  ThreadSafeQueue.h
include/Carcassonne/Training/: Gameplay.h  Training.h  TrainingSet.h
include/Carcassonne_GPU/: Connection.h  Contact.h  Direction.h  Edge.h  Groups.h  Parameters.h  Player.h  Position.h  ScoreBoard.h  Tiles.h
include/Carcassonne_GPU/AI/: AI.h  DeepRL.h  DeepRLPlayer.h  HeuristicPlayer.h  MCTS.h  MCTSPlayer.h  Network.h  Node.h  RandomPlayer.h  Tree.h
include/Carcassonne_GPU/Decoder/: Decoder.h
include/Carcassonne_GPU/Encoder/: GameState.h  IBoolWriter.h
include/Carcassonne_GPU/Game/: Board.h  Game.h  Move.h
include/Carcassonne_GPU/RL/: Network.h
include/Evolution/: DiffEvol.h
include/Graphics/: Context.h  Font.h  Surface.h  TextCache.h  Texture.h
include/Input/: Input.h
include/MSI/Game/: EventManager.h  Game.h  Render.h
include/MSI/Graphics/: Context.h  Graphics.h  Resource.h  SDLContext.h  Surface.h  Texture.h
include/MSI/Input/: Input.h
include/Tournament/: Tournament.h
include/Util/: DataWithPromise.h  IRandomGenerator.h  Random.h
include/Util_GPU/: CSVLogger.h  Device_buffer.hpp  IRandomGenerator.h  Random.h  Time.h  hash_map.h  hash_map_templates.h  int.h  internal.h  span_cpp17.h
include/caffe/: common.hpp  internal_thread.hpp  layer.hpp
include/caffe/proto/: caffe.pb.cc  caffe.pb.h
include/caffe/util/: cudnn.hpp  device_alternate.hpp  math_functions.hpp  mkl_alternate.hpp
logs/: mcts.csv  mcts.he.csv  mcts.hu.csv  mcts.mcts.csv  mcts.r.he.csv  mcts.r.hu.csv  mcts.r.mcts.csv  mcts.r.rand.csv  mcts.rand.csv
proto/: badsolver.prototxt  bck.prototxt  model.prototxt  modelXOR.prototxt  net_full_alphazero_2_res_blocks.prototxt  net_full_alphazero_40_res_blocks.prototxt  net_full_alphazero_40_res_blocks0.prototxt  net_full_alphazero_40_res_blocks3.prototxt  net_tic_tac_6_4_2_res_block.prototxt  solver.prototxt  solver0.prototxt  solver1.prototxt  solver2.prototxt  solver3.prototxt  solver4.prototxt  solver5.prototxt  solver6.prototxt  solver7.prototxt  solverXOR.prototxt  solver_train.prototxt
resource/: tiles.xcf  tiles2.xcf
src/Carcassonne/AI/: CMakeLists.txt  DeepRL.cpp  DeepRLPlayer.cpp  HeuristicPlayer.cpp  MCTS.cpp  MCTSPlayer.cpp  Node.cpp  RandomPlayer.cpp  Tree.cpp
src/Carcassonne/Decoder/: CMakeLists.txt  Decoder.cpp
src/Carcassonne/Encoder/: CMakeLists.txt  GameState.cpp  Rollout.cpp
src/Carcassonne_GPU/Game/: Board.cu  CMakeLists.txt  Game.cu  Move.cu
src/Eden_resources/: Ngpus_Ncpus.cu
src/Evolution/: CMakeLists.txt  DiffEvol.cpp
src/Game/: CMakeLists.txt  EventManager.cpp  Game.cpp  Render.cpp
src/Graphics/: CMakeLists.txt  Context.cpp  Font.cpp  Graphics.cpp  Resource.cpp  SDLContext.cpp  Surface.cpp  TextCache.cpp  Texture.cpp
src/Input/: CMakeLists.txt  Input.cpp
src/Proto/: CMakeLists.txt  Carcassonne.pb.cc  Carcassonne.pb.h  api.cmake
src/Test/: BoardTest.cpp  CMakeLists.txt  CaffeTest.cpp  EvolutionTest.cpp  Rollout.cpp  TileTest.cpp  UtilTest.cpp
src/Test/proto/: model.prototxt
src/Tournament/: CMakeLists.txt  Tournament.cpp
src/Uint128_t/: CMakeLists.txt  uint128_t.cpp
src/cudatest/: CMakeLists.txt  cudatest.cu
(+46 files in other folders)
